# rust-wasm-github-actions-test

./: .gitignore  Cargo.toml  binding-napi-0.0.0.tgz  binding-napi-aarch64-pc-windows-msvc.tgz  binding-napi-x86_64-pc-windows-msvc.tgz  binding-napi-x86_64-unknown-linux-gnu.tgz  build.sh  increment.js  increment.wasm  index.html
.github/workflows/: build-napi.yml  build-wasm.yml  deploy.yml  test.yml
binding-napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  publish.sh  run.js
binding-napi/__test__/: index.spec.mjs
binding-napi/npm/darwin-arm64/: README.md  package.json
binding-napi/npm/darwin-x64/: README.md  package.json
binding-napi/npm/linux-arm64-gnu/: README.md  package.json
binding-napi/npm/linux-x64-gnu/: README.md  package.json
binding-napi/npm/win32-arm64-msvc/: README.md  package.json
binding-napi/npm/win32-x64-msvc/: README.md  package.json
binding-napi/src/: lib.rs
binding-wasm/: Cargo.toml  build.sh
binding-wasm/src/: lib.rs
output/: increment.js  increment.wasm
public/: index.html
src/: lib.rs
testfiles/: dst.txt  src.json
tests/: integration_test.rs
