[workspace]
members = [".", "binding-napi", "binding-wasm"]

[workspace.package]
edition = "2021"

[package]
name = "rust-wasm-github-actions-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-json = "0.19.0"
tree-sitter-sql = { git = "https://github.com/future-architect/tree-sitter-sql.git" }

[workspace.dependencies]
rust-wasm-github-actions-test = { path = "." }

# from napi
[profile.release]
lto = true
